-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0, Lustre 2.15.0
-
None
-
3
-
9223372036854775807
When I run ‘lctl --device scratch-MDT0000 changelog_deregister’ on the MDS, I get
# lctl --device scratch-MDT0000 changelog_deregister Segmentation fault
From dmesg:
[ 2499.711304] lctl[20902]: segfault at 0 ip 00007fa7663a1fe7 sp 00007ffdb6619bb0 error 4 in libc-2.17.so[7fa766367000+1c4000]
If you look at the usage output when using --help, the message indicates that the changelog user is optional.
# lctl --device scratch-MDT0000 changelog_deregister --help
deregister an existing changelog user
usage: --device <mdtname> changelog_deregister [<id>|cl<id>...]
[--help|-h]
[--user|-u <username>]
run <command> after connecting to device <devno>
--device <devno> <command [args ...]>
If the changelog user is a required parameter for ‘lctl changelog_deregister’, we need to change the usage for message for ‘lctl changelog_deregister’ to make the changelog user required and, if at all possible, not seg fault when a changelog user is not specified.